--- a/src/app/index.css
+++ b/src/app/index.css
@@ -315,3 +315,8 @@ table.super-fancy tr.foobar {
 	border-radius: 6px;
 	box-shadow: 0 2px 2px #FFFFFF;
 }
+
+.picker__header select {
+    display: inline-block;
+    padding: 5px;
+}
