--- a/src/app/modules/commons/users/signup/signup.html
+++ b/src/app/modules/commons/users/signup/signup.html
@@ -76,11 +76,11 @@
                         <div class="col m3 s12">
                         	<div class="row">
 		                        <div class="input-field col m12 s6">
-									<label for="userBirthDate">{{'civilSection.label.userBirthDate' | translate }} <span class="red-text text-lighten-1">*</span></label>
+									<label for="signupBirthdate">{{'civilSection.label.userBirthDate' | translate }} <span class="red-text text-lighten-1">*</span></label>
 								</div>
 								<div class="input-field col m12 s6">
 									<div class="hide-on-med-and-down"><br/></div>
-									<input ng-model="signup.birthdateInput" id="userBirthDate" type="date" class="validate" required>
+                                    <input id="signupBirthdate" class="datepicker" name="signupBirthdate" type="text" ng-model="signup.birthdateInput" required/>
 								</div>
 							</div>
 						</div>
