Redesign fiche player et RWD

--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -1,7 +1,7 @@
 <div class="container">
 
     <!-- space between header menu and body-->
-    <div class="row s12"></div>
+    <div class="row"></div>
 
     <!-- body start-->
     <div class="row">
