--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -1,6 +1,6 @@
 <div class="container">
 <!-- body start-->
-    <div class="row">&nbsp;</div>
+    <div class="row"></div>
     <!-- view for tablet and phone -->
     <!-- Filter Zone start-->
     <div class="row hide-on-med-and-up">
