--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -1,6 +1,6 @@
 <div class="container">
 <!-- body start-->
-    <div class="row">&nbsp;</div>   
+    <div class="row"></div>   
     
     <!-- entete start -->
     <div class="row blue-grey darken-2">
