--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -239,7 +239,7 @@
             <span translate="content.signup.label.title"></span>
         </h5>
     </div>
-    <form class="col s12" ng-submit="usernameTest()">
+    <form class="col s12" ng-submit="usernameTest()" name="signup">
         <div class="modal-content grey lighten-3 ">
             <div class="row">
                 <div class="input-field col m6 s12">
@@ -255,7 +255,10 @@
                     <label for="login">{{'content.signup.label.login' | translate }}</label>
                 </div>
                 <div class="input-field col s12">
-                    <input id="email" type="email" class="validate" ng-model="signup.contact.email" required>
+                    <input type="email" name="email" class="validate" ng-model="signup.contact.email" 
+                           ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/" ng-class="{ 'invalid': signup.email.$invalid }">
+                    <span ng-class="{'has-error': signup.email.$dirty && signup.email.$error.required}" class="small red-text text-lighten-1"
+                        ng-hide="signup.email.$valid" translate="content.signup.emailDirty" required></span>
                     <label for="email">{{'content.signup.label.email' | translate }}</label>
                 </div>
                 <div class="input-field col m6 s12">
