--- a/src/app/modules/commons/users/profile/profil.html
+++ b/src/app/modules/commons/users/profile/profil.html
@@ -1,17 +1,28 @@
-<div class="container">
+<div class="container" ng-cloack>
+
+    <!-- space between header menu and body-->
+    <div class="row"></div>
+    
+    <!-- Entete -->
     <div class="row">
-        <div class="col s10"></div>
+        <div class="col s12">
+            <div class="row blue-grey darken-2 white-text center">
+                <div class="col m3 s12 center">
+                    <avatar person="user" width="'100px'"></avatar>
+                    <span class="small">{{'effectiveLabels.effectiveAvatar' | translate }}</span>
+                </div>
+                <div class="col m7 s12">
+                    <br/>
+                    <h4>{{user.firstname}} {{user.name}}</h4>
+                    <h5>{{user.account.login}}</h5>
+                </div>
+                <div class="col m2 s12">
+                    <br/>&nbsp;
+                </div>
+            </div>
+        </div>
     </div>
 
-
-    <div class="row">
-        <div class="col s4 m1">
-            <span class="red-text text-lighten-1"><i class="material-icons medium">account_circle</i></span>
-        </div>
-        <div class="col s5 m5">
-            <div><h5 class="light-green-text text-lighten-1" translate="profile.title"></h5></div>
-        </div>
-    </div>
     <div class="row">
         <div class="col s12">
             <ul class="tabs" tabs>
