--- a/src/app/modules/sandbox/effective/players/writePlayer.html
+++ b/src/app/modules/sandbox/effective/players/writePlayer.html
@@ -54,18 +54,9 @@
                             <div class="col m1 hide-on-small-only">&nbsp;</div>
                             <div class="col s12 m4">
                                 <div class="row">
-                                    <div class="input-field col l6 m6 s12">
-                                        <label>{{'playerLabels.playerGender' | translate }} <span class="red-text text-lighten-1">*</span></label>
-                                    </div>
-                                    <div class="input-field col l6 m6 s12 center-align">
-                                        <div class="hide-on-small-only"><br/></div>
-                                        <input name="gender" class="with-gap" type="radio" id="playerGenderF" value="{{'playerLabels.playerGenderF' | translate }}"
-                                                   ng-model="player.gender" required/>
-                                        <label for="playerGenderF">{{'playerLabels.playerGenderF' | translate }}</label>
-
-                                        <input name="gender" class="with-gap" type="radio" id="playerGenderM" value="{{'playerLabels.playerGenderM' | translate }}"
-                                           ng-model="player.gender" required/>
-                                        <label for="playerGenderM">{{'playerLabels.playerGenderM' | translate }}</label>
+                                    <div class="input-field">
+                                        <input id="playerBirthdate" class="datepicker" name="playerBirthdate" type="text" ng-model="player.birthdate" required/>
+                                        <label>{{'playerLabels.playerBirthdate' | translate }} <span class="red-text text-lighten-1">*</span></label>
                                     </div>
                                 </div>
                             </div>
@@ -78,7 +69,10 @@
                                     <label for="playerMail">{{'playerLabels.playerMail' | translate }}</label>
                                 </div>
                                 <div class="input-field col s8">
-                                    <input id="playerMail" type="email" class="validate" ng-model="player.contact.email">  
+                                    <input type="email" name="email" class="validate" ng-model="player.contact.email" 
+                                           ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/" ng-class="{ 'invalid': playerCivilSection.email.$invalid }">
+                                    <span ng-class="{'has-error': playerCivilSection.email.$dirty}" class="small red-text text-lighten-1"
+                                        ng-hide="playerCivilSection.email.$valid" translate="playerLabels.emailDirty"></span>
                                 </div>
                             </div>
                             
@@ -89,9 +83,18 @@
                             <div class="col m1 hide-on-small-only">&nbsp;</div>
                             <div class="col s12 m4">
                                 <div class="row">
-                                    <div class="input-field">
-                                        <input id="playerBirthdate" class="datepicker" name="playerBirthdate" type="text" ng-model="player.birthdate" required/>
-                                        <label>{{'playerLabels.playerBirthdate' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                                    <div class="input-field col l6 m6 s12">
+                                        <label>{{'playerLabels.playerGender' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                                    </div>
+                                    <div class="input-field col l6 m6 s12 center-align">
+                                        <div class="hide-on-small-only"><br/></div>
+                                        <input name="gender" class="with-gap" type="radio" id="playerGenderF" value="{{'playerLabels.playerGenderF' | translate }}"
+                                                   ng-model="player.gender" required/>
+                                        <label for="playerGenderF">{{'playerLabels.playerGenderF' | translate }}</label>
+
+                                        <input name="gender" class="with-gap" type="radio" id="playerGenderM" value="{{'playerLabels.playerGenderM' | translate }}"
+                                           ng-model="player.gender" required/>
+                                        <label for="playerGenderM">{{'playerLabels.playerGenderM' | translate }}</label>
                                     </div>
                                 </div>
                             </div>
@@ -169,7 +172,10 @@
                                     <label for="playerMail">{{'playerLabels.playerMail' | translate }}</label>
                                 </div>
                                 <div class="input-field col s8">
-                                    <input id="playerMail" type="email" class="validate" ng-model="player.contact.email">  
+                                    <input type="email" name="email2" class="validate" ng-model="player.contact.email" 
+                                           ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/" ng-class="{ 'invalid': playerCivilSection.email2.$invalid }">
+                                    <span ng-class="{'has-error': playerCivilSection.email2.$dirty}" class="small red-text text-lighten-1"
+                                        ng-hide="playerCivilSection.email2.$valid" translate="playerLabels.emailDirty"></span>
                                 </div>
                             </div>
                             <div class="col s12">
