RWD + $window.history.back()

--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -35,8 +35,8 @@
                 <div class="row m12 s12"><div class="divider red lighten-1"></div></div>
                 <div class="row">
                     <div class="col m4 s12 center-align">
-                        <a href="">
-                            <i class="material-icons red-text text-lighten-1 small tooltipped" ng-click="doTheBack()" 
+                        <a href="" ng-click="doTheBack()">
+                            <i class="material-icons red-text text-lighten-1 small tooltipped"  
                                data-position="top" data-delay="20" data-tooltip="{{'viewPlayer.buttons.returnViewPlayer' | translate }}">undo</i>
                         </a>
                     </div>
