--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -278,10 +278,26 @@
                 
                 <div class="input-field col m6 s12">
                     <input id="passwordConfirm" type="password" class="validate" ng-model="passwdConfirm" required>
-                    <label for="password">{{'content.signup.label.passwordConfirm' | translate }}</label>
+                    <label for="passwordConfirm">{{'content.signup.label.passwordConfirm' | translate }}</label>
                 </div>
                 <div class="input-field col s12">
-                    <div re-captcha ng-model="signup.captcha"></div>
+                	<div re-captcha ng-model="signup.captcha" id="custom_recaptcha_widget" style="display:none">
+                		<div class="col s12 m7">
+					    	<div id="recaptcha_image"></div>
+					    </div>
+					    <div class="col s6 m1" style="line-height:0.5;">
+					    	<a href="javascript:Recaptcha.reload()"><img width="25" height="18" src="http://www.google.com/recaptcha/api/img/clean/refresh.png"></a><br class="hide-on-med-and-down">
+			    			<a class="recaptcha_only_if_image" href="javascript:Recaptcha.switch_type('audio')" id="icon-audio"><img width="25" height="18" src="http://www.google.com/recaptcha/api/img/clean/audio.png"></a>
+        					<a class="recaptcha_only_if_audio" href="javascript:Recaptcha.switch_type('image')" id="icon-image"><img width="25" height="18" src="http://www.google.com/recaptcha/api/img/clean/text.png"></a><br class="hide-on-med-and-down">
+        					<a href="javascript:Recaptcha.showhelp()"><img id="recaptcha_whatsthis" width="25" height="16" src="http://www.google.com/recaptcha/api/img/clean/help.png" alt="Aide"></a>
+					    </div>
+					    <div class="col s6 m4"><img id="recaptcha_logo" alt="" width="71" height="36" src="http://www.google.com/recaptcha/api/img/clean/logo.png"></div>
+   						
+   						<div class="col s12 m6">
+   							<input type="text" id="recaptcha_response_field" name="recaptcha_response_field" />
+   						</div>
+   						<div class="col m6 hide-on-med-and-down">&nbsp;</div>
+					</div>
                 </div>
             </div>
         </div>
